--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "Middleware/sqlite"]
 	path = Middleware/sqlite
 	url = git@github.com:sqlite/sqlite.git
+[submodule "Middleware/glib"]
+	path = Middleware/glib
+	url = git@github.com:GNOME/glib.git
+[submodule "Middleware/cJSON"]
+	path = Middleware/cJSON
+	url = git@github.com:DaveGamble/cJSON.git
