--- a/Middleware/tests/CMakeLists.txt
+++ b/Middleware/tests/CMakeLists.txt
@@ -8,15 +8,18 @@ set(TEST_DIR ${CMAKE_CURRENT_SOURCE_DIR} CACHE STRING "base dir")
 file(GLOB SOURCE_DIR "${TEST_DIR}/*.c")
 
 link_directories(${TEST_DIR}/output/lib)
+link_directories(${TEST_DIR}/output/lib/x86_64-linux-gnu)
 add_executable(middleware ${SOURCE_DIR})
 
 # 设置编译参数
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -O3 -ggdb -gdwarf -funwind-tables -rdynamic -Wno-unused-parameter -D_GNU_SOURCE")
 set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Werror -O3")
 
-target_include_directories(middleware PRIVATE ${TEST_DIR}/test_include/sqlite)
-target_include_directories(middleware PRIVATE ${TEST_DIR}/test_include/cJSON)
-target_include_directories(middleware PRIVATE ${TEST_DIR}/test_include/glib)
+target_include_directories(middleware PRIVATE ${TEST_DIR}/output/include)
+target_include_directories(middleware PRIVATE ${TEST_DIR}/output/include/cjson)
+target_include_directories(middleware PRIVATE ${TEST_DIR}/output/lib/x86_64-linux-gnu/glib-2.0/include)
+target_include_directories(middleware PRIVATE ${TEST_DIR}/output/include/glib-2.0)
+
 target_include_directories(middleware PRIVATE ${TEST_DIR})
 
 # 链接库
