--- a/AKShare/requirements.txt
+++ b/AKShare/requirements.txt
@@ -3,16 +3,24 @@ akshare==1.14.1
 beautifulsoup4==4.12.3
 certifi==2024.6.2
 charset-normalizer==3.3.2
+contourpy==1.2.1
+cycler==0.12.1
 decorator==5.1.1
 et-xmlfile==1.1.0
+fonttools==4.53.0
 html5lib==1.1
 idna==3.7
 jsonpath==0.82.2
+kiwisolver==1.4.5
 lxml==5.2.2
+matplotlib==3.9.0
 numpy==1.26.4
 openpyxl==3.1.3
+packaging==24.1
 pandas==2.2.2
+pillow==10.3.0
 py-mini-racer==0.6.0
+pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 pytz==2024.1
 requests==2.32.3
