--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "Middleware/libfastjson"]
 	path = Middleware/libfastjson
 	url = https://github.com/rsyslog/libfastjson.git
+[submodule "Middleware/openssh-portable"]
+	path = Middleware/openssh-portable
+	url = git@github.com:openssh/openssh-portable.git
