--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "Middleware/openssh-portable"]
 	path = Middleware/openssh-portable
 	url = git@github.com:openssh/openssh-portable.git
+[submodule "Middleware/dbus"]
+	path = Middleware/dbus
+	url = https://gitlab.freedesktop.org/dbus/dbus.git
