--- a/Middleware/tests/gdbus/CMakeLists.txt
+++ b/Middleware/tests/gdbus/CMakeLists.txt
@@ -21,24 +21,26 @@ target_include_directories(client PRIVATE ${TEST_DIR}/output/include/cjson)
 target_include_directories(client PRIVATE ${TEST_DIR}/output/lib/x86_64-linux-gnu/glib-2.0/include)
 target_include_directories(client PRIVATE ${TEST_DIR}/output/include/glib-2.0)
 target_include_directories(client PRIVATE ${TEST_DIR}/output/include/gio-unix-2.0)
+target_include_directories(client PRIVATE ${TEST_DIR}/output/include/dbus-1.0)
 target_include_directories(client PRIVATE ${TEST_DIR}/test_cases)
 target_include_directories(client PRIVATE ${PROJECT_DIR}/db)
 target_include_directories(client PRIVATE ${PROJECT_DIR}/dbus)
 target_include_directories(client PRIVATE ${TEST_DIR})
 
 # 链接库
-target_link_libraries(client pthread gio-2.0 gobject-2.0 gmodule-2.0 gthread-2.0 rt glib-2.0)
+target_link_libraries(client pthread gio-2.0 gobject-2.0 gmodule-2.0 gthread-2.0 rt glib-2.0 dbus-1)
 
 target_include_directories(server PRIVATE ${TEST_DIR}/output/include)
 target_include_directories(server PRIVATE ${TEST_DIR}/output/include/cjson)
 target_include_directories(server PRIVATE ${TEST_DIR}/output/lib/x86_64-linux-gnu/glib-2.0/include)
 target_include_directories(server PRIVATE ${TEST_DIR}/output/include/glib-2.0)
 target_include_directories(server PRIVATE ${TEST_DIR}/output/include/gio-unix-2.0)
+target_include_directories(server PRIVATE ${TEST_DIR}/output/include/dbus-1.0)
 target_include_directories(server PRIVATE ${TEST_DIR}/test_cases)
 target_include_directories(server PRIVATE ${PROJECT_DIR}/db)
 target_include_directories(server PRIVATE ${PROJECT_DIR}/dbus)
 target_include_directories(server PRIVATE ${TEST_DIR})
 
 # 链接库
-target_link_libraries(server pthread gio-2.0 gobject-2.0 gmodule-2.0 gthread-2.0 rt glib-2.0)
+target_link_libraries(server pthread gio-2.0 gobject-2.0 gmodule-2.0 gthread-2.0 rt glib-2.0 dbus-1)
 
