--- a/Middleware/tests/rpc/CMakeLists.txt
+++ b/Middleware/tests/rpc/CMakeLists.txt
@@ -33,5 +33,5 @@ target_link_libraries(${PROJECT_NAME} pthread gio-2.0 gobject-2.0 gmodule-2.0 gt
 install(TARGETS ${PROJECT_NAME}
     LIBRARY DESTINATION ${TEST_DIR}/output/lib/)
     
-install(FILES rpc.h
+install(FILES rpc_middleware.h
     DESTINATION ${TEST_DIR}/output/include/)
